<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white"
    android:layout_marginBottom="8dp"
    android:elevation="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/usernameText"
        android:text="@string/username_hint"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/emailText"
        android:text="@string/enter_email"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/roleText"
        android:text="@string/role_short"
        android:textColor="#666"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:backgroundTint="#FF9800"
            android:textColor="#FFFFFF"
            android:padding="6dp" />

        <View
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="#F44336"
            android:textColor="#FFFFFF"
            android:padding="6dp" />

        <View
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/manageRoleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_short"
            android:backgroundTint="#3F51B5"
            android:textColor="#FFFFFF"
            android:padding="6dp" />
    </LinearLayout>

</LinearLayout>
